--- a/VueMastery/02 Real World Vue.js/real-world-vue/package.json
+++ b/VueMastery/02 Real World Vue.js/real-world-vue/package.json
@@ -8,6 +8,7 @@
 		"lint": "vue-cli-service lint"
 	},
 	"dependencies": {
+		"axios": "^0.18.0",
 		"lodash": "^4.17.11",
 		"vue": "^2.5.21",
 		"vue-router": "^3.0.1",
@@ -16,7 +17,7 @@
 	"devDependencies": {
 		"@vue/cli-plugin-babel": "^3.2.0",
 		"@vue/cli-plugin-eslint": "^3.2.0",
-		"@vue/cli-service": "^3.2.0",
+		"@vue/cli-service": "^3.2.3",
 		"@vue/eslint-config-prettier": "^4.0.1",
 		"babel-eslint": "^10.0.1",
 		"eslint": "^5.8.0",
