--- a/VueMastery/02 Real World Vue.js/real-world-vue/package.json
+++ b/VueMastery/02 Real World Vue.js/real-world-vue/package.json
@@ -11,21 +11,22 @@
 		"axios": "^0.18.0",
 		"lodash": "^4.17.11",
 		"nprogress": "^0.2.0",
-		"vue": "^2.5.21",
+		"vue": "^2.5.22",
 		"vue-router": "^3.0.1",
 		"vuejs-datepicker": "^1.5.4",
+		"vuelidate": "^0.7.4",
 		"vuex": "^3.0.1"
 	},
 	"devDependencies": {
-		"@vue/cli-plugin-babel": "^3.2.0",
-		"@vue/cli-plugin-eslint": "^3.2.0",
-		"@vue/cli-service": "^3.2.3",
+		"@vue/cli-plugin-babel": "^3.3.0",
+		"@vue/cli-plugin-eslint": "^3.3.0",
+		"@vue/cli-service": "^3.3.0",
 		"@vue/eslint-config-prettier": "^4.0.1",
 		"babel-eslint": "^10.0.1",
-		"eslint": "^5.8.0",
+		"eslint": "^5.12.0",
 		"eslint-plugin-vue": "^5.0.0",
 		"node-sass": "^4.11.0",
 		"sass-loader": "^7.1.0",
-		"vue-template-compiler": "^2.5.21"
+		"vue-template-compiler": "^2.5.22"
 	}
 }
